src/tui/snapshots/control_acceso__tui__visual_tests__Contratistas_80x24_Brisas.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                
 BRISAS CLI                                           Operador de prueba · ROOT 
 CONTRATISTAS                                                             ··:·· 
 ────────────────────────────────────────────────────────────────────────────── 
   BUSCAR · 0 RESULTADOS · Ejemplo: empresa:Brisas tipo:praind acceso:si        
                                                                                
                                                                                
 CÉDULA    NOMBRE         EMPRESA       TIPO      PRAIND      RUTA     ACCESO   
                                                                                
                          Sin contratistas registrados                          
                                                                                
 ────────────────────────────────────────────────────────────────────────────── 
 No hay un registro seleccionado.                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 ↑↓ Mover  PGUP/PGDN Página  ENTER Editar  N Nuevo  / Buscar  F4 Columnas       
 ESC Volver  F1 más  F2 Salida rápida  F7 Tema                                  
                                                                                

=== estilos ===
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                                           " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"Operador de prueba · ROOT" fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"CONTRATISTAS" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                                                             " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"··:··" fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"   BUSCAR · 0 RESULTADOS · Ejemplo: empresa:Brisas tipo:praind acceso:si        " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"CÉDULA    NOMBRE         EMPRESA       TIPO      PRAIND      RUTA     ACCESO  " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                         Sin contratistas registrados                         " fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"No hay un registro seleccionado.                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"↑↓" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Mover  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"PGUP/PGDN" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Página  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"ENTER" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Editar  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"N" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Nuevo  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"/" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Buscar  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F4" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Columnas       " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"ESC" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Volver  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F1" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" más  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F2" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F7" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Tema                                  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
